<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rr1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/solid6"
    android:gravity="center_horizontal|center_vertical"
    android:padding="15dp" >

    <ScrollView
        android:id="@+id/rr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/rr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/rr4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_and_border"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/regfirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/page1Str1"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:maxLength="10"
                    android:textColorHint="#b9b8d8"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/reglastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/page1Str2"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:textColorHint="#b9b8d8"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/rr5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <EditText
                        android:id="@+id/regemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:hint="@string/page1Str3"
                        android:inputType="text|textAutoComplete|textAutoCorrect"
                        android:maxLength="50"
                        android:textColorHint="#b9b8d8"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/regvalidEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:enabled="false" />
                </LinearLayout>

                <EditText
                    android:id="@+id/regPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="70"
                    android:hint="@string/page1Str4"
                    android:inputType="number"
                    android:maxLength="20"
                    android:textColorHint="#b9b8d8"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rr6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/regmale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/page1Str5"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/regfemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/page1Str6"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <EditText
                    android:id="@+id/regcountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                   android:hint="@string/page1Str7"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:maxLength="20"
                    android:textColorHint="#b9b8d8"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regcity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/page1Str8"
                    android:inputType="text|textAutoComplete|textAutoCorrect"
                    android:maxLength="20"
                    android:textColorHint="#b9b8d8"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#ffdab9"
                android:gravity="center_horizontal"
                android:text="@string/page1Str9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/rr7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_and_border"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/rr8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <EditText
                        android:id="@+id/regusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:hint="@string/page1Str10"
                        android:inputType="text|textAutoComplete|textAutoCorrect"
                        android:maxLength="20" />

                    <ImageView
                        android:id="@+id/regexistingUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:scaleType="center" />
                </LinearLayout>

                <TextView
                    android:id="@+id/regtvExisting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/page1Str11"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/regpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/page1Str12"
                    android:inputType="text|textPassword"
                    android:maxLength="20" />

                <LinearLayout
                    android:id="@+id/rr9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="100" >

                    <EditText
                        android:id="@+id/regconfPassReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"
                        android:hint="@string/page1Str13"
                        android:inputType="text|textPassword"
                        android:maxLength="20" />

                    <CheckBox
                        android:id="@+id/regconfirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:enabled="false" />
                </LinearLayout>
            </LinearLayout>

            <com.ahmed.rounded_imageview.RoundedImageView
                android:id="@+id/regPersonal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <Button
                android:id="@+id/regupload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page1Str14"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/regDonor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page1Str15"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/regBloodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_border"
                android:padding="6dp"
                android:text="@string/page1Str16"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="4dp"
                android:weightSum="100" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="45"
                    android:background="@android:color/holo_red_dark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="10"
                    android:gravity="center_horizontal"
                    android:text="@string/page1Str17"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight="45"
                    android:background="@android:color/holo_red_dark" />
            </LinearLayout>

            <!--
                 <com.google.android.gms.plus.PlusOneButton
                xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
                android:id="@+id/plus_one_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                plus:annotation="inline"
                plus:size="standard" />
            -->

            <com.google.android.gms.common.SignInButton
                android:id="@+id/PlusOneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_margin="5dp"
                
                />

            <com.facebook.widget.LoginButton
                android:id="@+id/face_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <!--
                 <com.twitter.sdk.android.core.identity.TwitterLoginButton
                android:id="@+id/twitter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true" />
            -->

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/My_Add_Id" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>